12/1/2006
Released V1.5b7

Dynalite
--------
Interpret preset changes from dynalite network
Scan levels of devices in an area after preset change in an area.

CBUS
----
Added support for temperature sensors
Configuration syntax is
                  <TEMPERATURE ACTIVE="Y" KEY="42" NAME="Temp Sensor2" DISPLAY_NAME="TEMP_SENSOR2" />
A message will be sent to the client whenever the temperature changes. Temperatures are reported in whole numbers only
    				COMMAND="on" EXTRA="temperature"


Configuration
-------------
Added ANALOG synonym for ANALOGUE
Added AUDIO_OUTPUT synonym for AUDIO
Added AV_OUTPUT synonym for AV
Added CAMERA_INPUT synonym for CAMERA
Refactored configuration parser to be more modular.
Changed model DISPLAY_NAME to DESCRIPTION; DISPLAY_NAME can still be used
Changed model NAME to DEVICE_TYPE; NAME can still be used


2005/12/18
Released V1.5b6

Named Clients
----------------
Infrastructure support for named clients has been added.
If a client sends a CONTROL message with KEY="ID" COMMAND="name" EXTRA="name for the client" the address book 
will be updated with this information.
If a client sends a CONTROL message with KEY="ID"  COMMAND="user" EXTRA="user name" the address book will
be updated with this information.
The fields TARGET and TARGET_USER have been added to all client XML packets, initially only MESSAGE control 
types will be useful. Underlying support for TARGET_USER has not yet been fully implemented, more functionality
is required for it to be fully useful.
If a TARGET is specified and a MESSAGE command is sent from the client; it will be conveyed to the TARGET.
A target of All sends the message to all clients apart from the orginating client. -1 is the default if
no specific target has been specified.
A target of All_Inc_Src sends the message to all clients, this may prove to not be useful.

Message structure is
	<MESSAGE TARGET="Kitchen" TITLE="Test" HIDECLODE="TRUE" AUTOCLOSE="5" ICON="" CONTENT="Hello" />