@@ -138,7 +138,7 @@
         !-- ______________________________________  DynaLite DEFS  ____________________  -->
         <DEVICE ACTIVE="Y" DEVICE_TYPE="DYNALITE" DESCRIPTION="DynaLite Lights">
                 <CONNECTION>
-                        <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
+                        <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N"  FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="NONE" />
                         <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5001"/>
                         <IP ACTIVE="Y" IP_ADDRESS="192.168.1.70" PORT="4999"/>
@@ -150,8 +150,10 @@
                 
                         <CONTACT_CLOSURE ACTIVE="Y" KEY="01" BOX="01" NAME="Button 1" DISPLAY_NAME="BUTTON_1" />
                         <CONTACT_CLOSURE ACTIVE="Y" KEY="01" BOX="02" NAME="Button 2" DISPLAY_NAME="BUTTON_2" />
-                        <LIGHT_DYNALITE_AREA ACTIVE="Y" BLA="01" AREA="02" NAME="Area 02" DISPLAY_NAME="GARAGE_LIGHT" />
-                        <LIGHT_DYNALITE_AREA ACTIVE="Y" BLA="01" AREA="03" NAME="Area 03" DISPLAY_NAME="BBQ_LIGHT" />
+                        
+                        <LIGHT_DYNALITE_AREA ACTIVE="Y" BLA="01" KEY="01" NAME="Area 01" DISPLAY_NAME="GARAGE_LIGHT" />
+                        <LIGHT_DYNALITE_AREA ACTIVE="Y" BLA="01" KEY="02" NAME="Area 02" DISPLAY_NAME="BBQ_LIGHT" />
+
                         <LIGHT_DYNALITE ACTIVE="Y" KEY="01" AREA="01" NAME="Office Light" DISPLAY_NAME="OFFICE_LIGHT" POWER_RATING="100"/>
                         <LIGHT_DYNALITE ACTIVE="Y" KEY="02" AREA="02" NAME="Hall Light" DISPLAY_NAME="HALL_LIGHT" POWER_RATING="100"/>
                         <LIGHT_DYNALITE ACTIVE="Y" KEY="05" RELAY="Y" AREA="01" NAME="BBQ Floods" DISPLAY_NAME="BBQ_FLOODS" POWER_RATING="100"/>
