@@ -17,7 +17,16 @@
         <CONTROL KEY="" COMMAND="pause" EXTRA="5"  />
     <CONTROL KEY="GARAGE_LIGHT" COMMAND="on" EXTRA="" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" />
   </CONTROL>
-   <CONTROL KEY="MACRO" COMMAND="getList" EXTRA="eLife_Startup_keep" TYPE="undefined" STATUS="noToolbar" RUNNING="0">
+   <CONTROL KEY="MACRO" COMMAND="getList" EXTRA="eLife_Startup_keep" TYPE="" STATUS="noToolbar" RUNNING="0">
     <CONTROL KEY="ENSUITE_LV_LIGHT" COMMAND="on" EXTRA="50" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" />
+  </CONTROL>
+   <CONTROL KEY="MACRO" COMMAND="getList" EXTRA="Dyn A1 -> 2 link" TYPE="" STATUS="noDelete,noEdit" RUNNING="0">
+    <CONTROL KEY="GARAGE_LIGHT" COMMAND="link" EXTRA="2" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" />
+  </CONTROL>
+  <CONTROL KEY="MACRO" COMMAND="getList" EXTRA="Dyn A2 -> 1 link" TYPE="" STATUS="noDelete,noEdit" RUNNING="0">
+    <CONTROL KEY="BBQ_LIGHT" COMMAND="link" EXTRA="2" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" />
+  </CONTROL>
+  <CONTROL KEY="MACRO" COMMAND="getList" EXTRA="Dyn A1 pres 2" TYPE="" STATUS="noDelete,noEdit" RUNNING="0">
+    <CONTROL KEY="GARAGE_LIGHT" COMMAND="preset" EXTRA="2" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" />
   </CONTROL>
 </MACROS>
